// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]
<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.2.15 2024/5/8
  <ul>
    <li>既読フラグの管理を改善</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.2.14 2024/5/8
  <ul>
    <li>アニメシステムのバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.13 2024/5/7
  <ul>
    <li>iOS自動ビルドの追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.12 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.11 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.10 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.9 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.8 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.7 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.6 2024/5/7
  <ul>
    <li>アニメ機能で拡大率が0になるバグを修正</li>
    <li>クリックアニメが表示されたままになるバグを修正</li>
    <li>テンプレートゲームのフォント色を修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.5 2024/5/7
  <ul>
    <li>口パクに対応</li>
    <li>AndroidのAPKファイルの自動ビルドに対応</li>
  </ul>
</li>
<li>Polaris Engine 1.2.4 2024/5/5
  <ul>
    <li>Windows版Android Studioでのビルドの改善</li>
  </ul>
</li>
<li>Polaris Engine 1.2.3 2024/5/5
  <ul>
    <li>GUI機能で右クリックキャンセルした際にgosub-backボタンがあればその動作をするように変更</li>
    <li>MacでのAndroidビルドの問題を修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.2 2024/5/5
  <ul>
    <li>GUI機能のバグ修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.1 2024/5/3
  <ul>
    <li>game-nosign.exeを追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.0 2024/5/2
  <ul>
    <li>Unity対応の最初のアルファ版</li>
  </ul>
</li>
<li>Polaris Engine 1.1.24 2024/5/1
  <ul>
    <li>libpngのバージョンアップ(Windows番のAndroid Studioでのビルドに対応)</li>
  </ul>
</li>
<li>Polaris Engine 1.1.23 2024/5/1
  <ul>
    <li>Android版の修正</li>
  </ul>
</li>
<li>Polaris Engine 1.1.22 2024/4/28
  <ul>
    <li>システムメニューのカスタムメニューGUIを開いたときのバグを修正</li>
  </ul>
</li>