@@ -67,9 +67,7 @@ void init_mixer(void)
 	for (n = 0; n < MIXER_STREAMS; n++) {
 		vol_cur[n] = 1.0f;
 		vol_local[n] = 1.0f;
-
-		/* vol_global[n] はセーブデータからロード済み */
-
+		vol_global[n] = 1.0f;
 		set_sound_volume(n, vol_global[n] * vol_master);
 
 		/* Androidでは再利用されるので初期化する */
